v001/test-summary/ctest/Run_005.md
<a id="top"></a>
[← back](README.md) · [↓ bottom](#bottom)

# ctest — Run_005

_jac313-001 · clang 22.1.8 · Debug · headers · 2026-07-03T04:39:44Z_

| test | persist | mode | tool | status | ms |
|---|---|---|---|---|--:|
| jac313_host_group_test | - | - | - | pass | 50 |
| jac313_identity_dedup_test | - | - | - | pass | 50 |
| jac313_instance_hash_test | - | - | - | pass | 50 |
| jac313_jtext_v001_parser_validator_test | - | - | - | pass | 50 |
| jac313_jtext_v001_test | - | - | - | pass | 50 |
| jac313_qlite_v001_test | - | - | - | pass | 50 |
| jac313_run_identity_test | - | - | - | pass | 50 |
| jac313_store_001_TS | - | - | - | pass | 50 |
| jac313_store_001_XS | - | - | - | pass | 50 |
| jac313_store_002_TS | - | - | - | pass | 50 |
| jac313_store_002_XS | - | - | - | pass | 50 |
| jac313_store_003_TS | - | - | - | pass | 50 |
| jac313_store_003_XS | - | - | - | pass | 50 |
| jac313_store_004_TS | - | - | - | pass | 50 |
| jac313_store_004_XS | - | - | - | pass | 50 |
| jac313_store_005_TS | - | - | - | pass | 50 |
| jac313_store_005_XS | - | - | - | pass | 50 |
| jac313_store_006_TS | - | - | - | pass | 50 |
| jac313_store_006_XS | - | - | - | pass | 50 |
| jac313_store_007_TS | - | - | - | pass | 50 |
| jac313_store_007_XS | - | - | - | pass | 50 |
| jac313_store_008_TS | - | - | - | pass | 150 |
| jac313_store_008_XS | - | - | - | pass | 251 |
| jac313_store_bench_smoke | - | - | - | pass | 50 |
| jac313_store_binary_persist_smoke | - | - | - | pass | 50 |
| jac313_store_binary_reader_test | - | - | - | pass | 50 |
| jac313_store_binary_to_jtext_smoke | - | - | - | pass | 50 |
| jac313_store_flag_routing_smoke | - | - | - | pass | 50 |
| jac313_store_flags | - | - | - | pass | 50 |
| jac313_store_jtext_persist_smoke | - | - | - | pass | 50 |
| jac313_store_metric_view | - | - | - | pass | 50 |
| jac313_store_metric_view_test | - | - | - | pass | 50 |
| jac313_store_sql_persist_smoke | - | - | - | pass | 50 |
| jac313_store_v001_test | - | - | - | pass | 50 |

---
[← back](README.md) · [↑ top](#top)
<a id="bottom"></a>
